partial fix for bug #195142 Canceling a move to trash permanently deletes mailbox thanks to ajschult@eos.ncsu.edu for the patch. r=sspitzer, sr=bienvenu, a=asa,sspitzer